--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "gsap": "^3.13.0",
     "pinia": "^3.0.1",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
