--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.6",
     "gsap": "^3.13.0",
     "pinia": "^3.0.1",
+    "sweetalert2": "^11.22.0",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
