--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "aos": "^2.3.4",
     "gsap": "^3.13.0",
     "pinia": "^3.0.1",
     "sweetalert2": "^11.22.0",
